--- a/src/main/resources/assets/charm/lang/en_us.json
+++ b/src/main/resources/assets/charm/lang/en_us.json
@@ -101,8 +101,8 @@
   "container.charm.portable_ender_chest": "Portable Ender Chest",
   "container.charm.woodcutter": "Woodcutter",
   "entity.charm.coral_squid": "Coral Squid",
-  "entity.minecraft.villager.beekeeper": "Beekeeper",
-  "entity.minecraft.villager.lumberjack": "Lumberjack",
+  "entity.minecraft.villager.charm.beekeeper": "Beekeeper",
+  "entity.minecraft.villager.charm.lumberjack": "Lumberjack",
   "filled_map.charm.trader_map": "%s Map",
   "gui.charm.recipebook.toggleRecipes.fireable": "Showing Fireable",
   "item.charm.bat_bucket": "Bat in a Bucket",
