--- a/src/main/resources/assets/charm/lang/en_us.json
+++ b/src/main/resources/assets/charm/lang/en_us.json
@@ -68,7 +68,7 @@
   "block.charm.oak_crate": "Oak Crate",
   "block.charm.oak_ladder": "Oak Ladder",
   "block.charm.oak_trapped_chest": "Oak Trapped Chest",
-  "block.charm.placed_glowstone_dust": "Glowstone Dust",
+  "block.charm.glowball_blob": "Glowball Blob",
   "block.charm.redstone_lantern": "Redstone Lantern",
   "block.charm.redstone_sand": "Redstone Sand",
   "block.charm.refined_obsidian": "Refined Obsidian",
@@ -110,7 +110,7 @@
   "item.charm.coral_squid_spawn_egg": "Coral Squid Spawn Egg",
   "item.charm.endermite_powder": "Endermite Powder",
   "item.charm.fisherman_barrel": "Fisherman Barrel",
-  "item.charm.glow_ball": "Glow Ball",
+  "item.charm.glowball": "Glowball",
   "item.charm.netherite_nugget": "Netherite Nugget",
   "item.charm.populated_beehive": "Honey Farm Starter Pack",
   "item.charm.suspicious_brew": "Suspicious Brew",
