--- a/src/main/resources/assets/charm/lang/en_us.json
+++ b/src/main/resources/assets/charm/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+
   "block.charm.acacia_barrel": "Acacia Barrel",
   "block.charm.acacia_bookcase": "Acacia Bookcase",
   "block.charm.acacia_bookshelf": "Acacia Bookshelf",
@@ -45,6 +46,7 @@
   "block.charm.fire_prismarine_bricks": "Fire Prismarine Bricks",
   "block.charm.fire_sea_lantern": "Fire Sea Lantern",
   "block.charm.fisherman_barrel": "Fisherman Barrel",
+  "block.charm.glowball_blob": "Glowball Blob",
   "block.charm.gold_bars": "Gold Bars",
   "block.charm.gold_chain": "Gold Chain",
   "block.charm.gold_lantern": "Gold Lantern",
@@ -68,7 +70,6 @@
   "block.charm.oak_crate": "Oak Crate",
   "block.charm.oak_ladder": "Oak Ladder",
   "block.charm.oak_trapped_chest": "Oak Trapped Chest",
-  "block.charm.glowball_blob": "Glowball Blob",
   "block.charm.redstone_lantern": "Redstone Lantern",
   "block.charm.redstone_sand": "Redstone Sand",
   "block.charm.refined_obsidian": "Refined Obsidian",
@@ -100,6 +101,8 @@
   "container.charm.portable_crafting_table": "Portable Crafting",
   "container.charm.portable_ender_chest": "Portable Ender Chest",
   "container.charm.woodcutter": "Woodcutter",
+  "enchantment.charm.acquisition": "Acquisition",
+  "enchantment.charm.tinted": "Tinted",
   "entity.charm.coral_squid": "Coral Squid",
   "entity.minecraft.villager.charm.beekeeper": "Beekeeper",
   "entity.minecraft.villager.charm.lumberjack": "Lumberjack",
@@ -113,6 +116,7 @@
   "item.charm.glowball": "Glowball",
   "item.charm.netherite_nugget": "Netherite Nugget",
   "item.charm.populated_beehive": "Honey Farm Starter Pack",
+  "item.charm.raid_horn": "Raid Horn",
   "item.charm.suspicious_brew": "Suspicious Brew",
   "key.charm.openCraftingTable": "Open Portable Crafting Table",
   "key.charm.openEnderChest": "Open Portable Ender Chest",
