Fix missing lang key #432

--- a/src/main/resources/assets/charm/lang/en_us.json
+++ b/src/main/resources/assets/charm/lang/en_us.json
@@ -104,6 +104,7 @@
   "enchantment.charm.acquisition": "Acquisition",
   "enchantment.charm.tinted": "Tinted",
   "entity.charm.coral_squid": "Coral Squid",
+  "entity.charm.moobloom": "Moobloom",
   "entity.minecraft.villager.charm.beekeeper": "Beekeeper",
   "entity.minecraft.villager.charm.lumberjack": "Lumberjack",
   "filled_map.charm.trader_map": "%s Map",
