--- a/src/main/resources/assets/charm/lang/en_us.json
+++ b/src/main/resources/assets/charm/lang/en_us.json
@@ -114,6 +114,7 @@
   "item.charm.atlas": "Atlas",
   "item.charm.bat_bucket": "Bat in a Bucket",
   "item.charm.beeswax": "Beeswax",
+  "item.charm.coral_squid_bucket": "Squid in a Bucket",
   "item.charm.coral_squid_spawn_egg": "Coral Squid Spawn Egg",
   "item.charm.endermite_powder": "Endermite Powder",
   "item.charm.fisherman_barrel": "Fisherman Barrel",
