--- a/src/main/resources/assets/charm/lang/en_us.json
+++ b/src/main/resources/assets/charm/lang/en_us.json
@@ -70,6 +70,7 @@
   "block.charm.oak_crate": "Oak Crate",
   "block.charm.oak_ladder": "Oak Ladder",
   "block.charm.oak_trapped_chest": "Oak Trapped Chest",
+  "block.charm.player_pressure_plate": "Gilded Blackstone Pressure Plate",
   "block.charm.redstone_lantern": "Redstone Lantern",
   "block.charm.redstone_sand": "Redstone Sand",
   "block.charm.refined_obsidian": "Refined Obsidian",
